Update: add new feature pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   uuid: ^3.0.7
   firebase_storage: ^11.0.10
   file_picker: ^5.2.5
+  flutter_bluetooth_serial: ^0.3.2
 
 dev_dependencies:
   flutter_test:
